--- a/porfolio.html
+++ b/porfolio.html
@@ -7,40 +7,40 @@
     body {
         margin: 0;
         font-family: "Times New Roman", Times, serif;
-        background-color: #f0f8ff; /* light blue background for contrast */
+        background-color: #ffffff;
+        color: #000000;
     }
 
     header {
-        background-color: #1f7a1f; /* green from landing page */
-        color: #fff;
+        background-color: #000000;
+        color: #facc15;
         padding: 20px;
         text-align: center;
-        border-bottom: 4px solid #c9a200; /* mustard yellow border */
+        border-bottom: 4px solid #facc15;
     }
 
     header h1 {
         margin: 0;
-        font-size: 28px;
+        font-size: 32px;
     }
 
     nav {
-        background-color: #c9a200; /* mustard yellow */
+        background-color: #facc15;
         display: flex;
         justify-content: center;
         padding: 10px;
-        box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+        box-shadow: 0 4px 8px rgba(0,0,0,0.2);
     }
 
     nav a {
         margin: 0 15px;
         text-decoration: none;
-        color: #1f7a1f; /* green text */
+        color: #000000;
         font-weight: bold;
-        transition: color 0.3s ease;
     }
 
     nav a:hover {
-        color: #0047ab; /* blue accent on hover */
+        color: #ffffff;
     }
 
     .section {
@@ -50,41 +50,52 @@
         padding: 25px;
         border-radius: 12px;
         box-shadow: 0 8px 20px rgba(0,0,0,0.1);
-        border-left: 6px solid #1f7a1f; /* green accent */
+        border-left: 6px solid #facc15;
     }
 
     h2 {
-        color: #1f7a1f;
+        color: #facc15;
         margin-bottom: 15px;
     }
 
     h3 {
-        color: #0047ab; /* blue headings for subsections */
+        color: #000000;
         margin-top: 20px;
         margin-bottom: 10px;
     }
 
-    /* Profile picture styling */
     .profile-pic {
         width: 150px;
         height: 150px;
         object-fit: cover;
         border-radius: 50%;
-        border: 3px solid #c9a200; /* mustard yellow border */
+        border: 3px solid #facc15;
         margin-bottom: 15px;
     }
 
-    .works img, .works a {
-        display: inline-block;
-        margin: 10px;
-        max-width: 200px;
-        border: 3px solid #1f7a1f;
-        border-radius: 8px;
-        transition: transform 0.3s ease;
+    /* Works section swipe & links */
+    .works-container {
+        display: flex;
+        overflow-x: auto;
+        gap: 15px;
+        padding-bottom: 10px;
     }
 
-    .works img:hover, .works a:hover {
-        transform: scale(1.05);
+    .works-container a {
+        flex: 0 0 auto;
+        padding: 10px 15px;
+        background-color: #facc15;
+        color: #000;
+        text-decoration: none;
+        font-weight: bold;
+        border-radius: 5px;
+        text-align: center;
+        min-width: 150px;
+    }
+
+    .works-container a:hover {
+        background-color: #000;
+        color: #facc15;
     }
 
     ul {
@@ -93,7 +104,7 @@
     }
 
     p, li {
-        color: #333;
+        color: #000000;
         line-height: 1.6;
     }
 </style>
@@ -110,9 +121,9 @@
     <a href="#works">Recent Works</a>
 </nav>
 
-<!-- DETAILED PROFILE SECTION -->
 <section id="profile" class="section">
     <h2>Profile</h2>
+    <!-- Replace profile.jpg with your actual image file -->
     <img src="profile.jpg" alt="Profile Picture" class="profile-pic">
 
     <p><strong>Name:</strong> Vevien Althia A. Trasmonte</p>
@@ -148,7 +159,6 @@
     </ul>
 </section>
 
-<!-- CONTACT SECTION -->
 <section id="contact" class="section">
     <h2>Inquiries / Contact</h2>
     <p><strong>Email:</strong> vevienabiera@gmail.com</p>
@@ -156,13 +166,14 @@
     <p><strong>Address:</strong> Purok-12A Damilag, Manolo Fortich, Bukidnon</p>
 </section>
 
-<!-- RECENT WORKS SECTION -->
 <section id="works" class="section works">
     <h2>Recent Works</h2>
-    <p>Check out some of my recent projects:</p>
-    <a href="project1.html" target="_blank"><img src="project1.jpg" alt="Project 1"></a>
-    <a href="project2.html" target="_blank"><img src="project2.jpg" alt="Project 2"></a>
-    <a href="project3.html" target="_blank"><img src="project3.jpg" alt="Project 3"></a>
+    <p>Click to open my files:</p>
+    <div class="works-container">
+        <a href="TARPULIN.png" target="_blank">Tarpulin Image</a>
+        <a href="ICS_PINNING.zip" target="_blank">ICS Pinning ZIP</a>
+        <a href="Resume_A4.pdf" target="_blank">Resume PDF</a>
+    </div>
 </section>
 
 </body>
