--- a/porfolio.html
+++ b/porfolio.html
@@ -7,13 +7,13 @@
     body {
         margin: 0;
         font-family: "Times New Roman", Times, serif;
-        background-color: #ffffff;
-        color: #000000;
+        background-color: #ffffff; /* white background */
+        color: #1f7a1f; /* dark green text */
     }
 
     header {
-        background-color: #000000;
-        color: #facc15;
+        background-color: #1f7a1f; /* green header */
+        color: #facc15; /* yellow text */
         padding: 20px;
         text-align: center;
         border-bottom: 4px solid #facc15;
@@ -22,6 +22,23 @@
     header h1 {
         margin: 0;
         font-size: 32px;
+    }
+
+    .back-button {
+        display: inline-block;
+        margin-bottom: 10px;
+        padding: 8px 15px;
+        background-color: #facc15; /* yellow button */
+        color: #1f7a1f; /* green text */
+        text-decoration: none;
+        font-weight: bold;
+        border-radius: 5px;
+        transition: 0.3s;
+    }
+
+    .back-button:hover {
+        background-color: #1f7a1f;
+        color: #facc15;
     }
 
     nav {
@@ -35,12 +52,12 @@
     nav a {
         margin: 0 15px;
         text-decoration: none;
-        color: #000000;
+        color: #1f7a1f; /* green text */
         font-weight: bold;
     }
 
     nav a:hover {
-        color: #ffffff;
+        color: #facc15;
     }
 
     .section {
@@ -50,7 +67,7 @@
         padding: 25px;
         border-radius: 12px;
         box-shadow: 0 8px 20px rgba(0,0,0,0.1);
-        border-left: 6px solid #facc15;
+        border-left: 6px solid #facc15; /* yellow accent */
     }
 
     h2 {
@@ -59,7 +76,7 @@
     }
 
     h3 {
-        color: #000000;
+        color: #1f7a1f;
         margin-top: 20px;
         margin-bottom: 10px;
     }
@@ -85,16 +102,17 @@
         flex: 0 0 auto;
         padding: 10px 15px;
         background-color: #facc15;
-        color: #000;
+        color: #1f7a1f;
         text-decoration: none;
         font-weight: bold;
         border-radius: 5px;
         text-align: center;
         min-width: 150px;
+        transition: 0.3s;
     }
 
     .works-container a:hover {
-        background-color: #000;
+        background-color: #1f7a1f;
         color: #facc15;
     }
 
@@ -104,7 +122,7 @@
     }
 
     p, li {
-        color: #000000;
+        color: #1f7a1f;
         line-height: 1.6;
     }
 </style>
@@ -114,6 +132,12 @@
 <header>
     <h1>My Portfolio</h1>
 </header>
+
+<div class="back-button-container" style="text-align: right; margin: 10px 20px 0 0;">
+    <a href="index.html" class="back-button" style="padding: 10px 20px; font-size: 16px;">← Back</a>
+</div>
+
+
 
 <nav>
     <a href="#profile">Profile</a>
@@ -170,9 +194,9 @@
     <h2>Recent Works</h2>
     <p>Click to open my files:</p>
     <div class="works-container">
-        <a href="TARPULIN.png" target="_blank">Tarpulin Image</a>
-        <a href="ICS_PINNING.zip" target="_blank">ICS Pinning ZIP</a>
-        <a href="Resume_A4.pdf" target="_blank">Resume PDF</a>
+        <a href="https://www.canva.com/design/DAG9_2z4PCE/wzsFalmWWWX3cC5bqDU8ZQ/view?utm_content=DAG9_2z4PCE&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h884ca73d6e" target="_blank">Tarpulin</a>
+        <a href="https://www.canva.com/design/DAG-AWGi9Kk/OB-DzSkjCZuHw7xqOjlyEA/view?utm_content=DAG-AWGi9Kk&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h3cf69b091c" target="_blank">ICS Pinning</a>
+        <a href="https://www.canva.com/design/DAG96UPA_YA/Lo0ok8PsN_w4voeutW57HA/view?utm_content=DAG96UPA_YA&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h9a32b9dc3d" target="_blank">Resume</a>
     </div>
 </section>
 
