--- a/porfolio.html
+++ b/porfolio.html
@@ -137,8 +137,6 @@
     <a href="index.html" class="back-button" style="padding: 10px 20px; font-size: 16px;">← Back</a>
 </div>
 
-
-
 <nav>
     <a href="#profile">Profile</a>
     <a href="#contact">Inquiries/Contact</a>
@@ -186,7 +184,9 @@
 <section id="contact" class="section">
     <h2>Inquiries / Contact</h2>
     <p><strong>Email:</strong> vevienabiera@gmail.com</p>
-    <p><strong>Phone:</strong> 09511959950</p>
+    <p><strong>GitHub:</strong> https://github.com/TrasmonteVevien</p>
+    <p><strong>SocMed:</strong> @valthiatrasmonte</p>
+    <p><strong>Phone:</strong> 63+9511959950</p>
     <p><strong>Address:</strong> Purok-12A Damilag, Manolo Fortich, Bukidnon</p>
 </section>
 
